# algorithms

./: .gitignore  README.md  pyproject.toml
src/: binary_search.py  breadth_first_search.py  depth_first_search.py  factorial.py  fibonacci.py  quick_sort.py
test/: test_binary_search.py  test_factorial.py  test_fiboonacci.py  test_quick_sort.py
